<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/title_register"
                 />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_title"
                android:hint="@string/hint_username"
                android:paddingTop="4dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:hint="@string/hint_lastname"
                android:inputType="text"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastname"
                android:hint="@string/hint_firstname"
                android:inputType="text"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstname"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/street_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:editable="true"
                android:hint="@string/hint_street"
                android:inputType="text"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/street_no"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:hint="@string/hint_state"
                android:inputType="text"
                android:paddingTop="3dp" />

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/state"
                android:hint="@string/hint_zipcode"
                android:inputType="number"
                android:paddingTop="3dp" />

            <Spinner
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_role"
                android:inputType="text"
                android:paddingTop="3dp"
                android:layout_below="@+id/zipcode"/>


            <Button
                android:id="@+id/updateProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/role"
                android:layout_centerHorizontal="true"
                android:background="@android:color/background_dark"
                android:paddingTop="3dp"
                android:text="@string/button_register"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>