<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_userName"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Spinner
            android:id="@+id/role"
            android:layout_width="288dp"
            android:layout_height="21dp"
            android:layout_below="@+id/firstname"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_role"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintStart_toEndOf="@+id/text_role"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <TextView
            android:id="@+id/text_city"
            android:layout_width="38dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:text="@string/hint_city"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/city"
            app:layout_constraintHorizontal_bias="0.705"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_streetno" />

        <TextView
            android:id="@+id/text_state"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/hint_state"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/state"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_city" />

        <TextView
            android:id="@+id/text_zipcode"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/hint_zipcode"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/zipcode"
            app:layout_constraintTop_toBottomOf="@+id/text_state" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="84dp"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/hint_password"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/text_username" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/hint_email"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone" />

        <TextView
            android:id="@+id/text_streetno"
            android:layout_width="78dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/hint_street"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/street_no"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="70dp"
            android:layout_height="22dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/hint_phone"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_role" />

        <TextView
            android:id="@+id/text_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hint_lastname"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/lastname"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <TextView
            android:id="@+id/text_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hint_firstname"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/firstname"
            app:layout_constraintTop_toBottomOf="@+id/text_lastname" />

        <TextView
            android:id="@+id/text_role"
            android:layout_width="66dp"
            android:layout_height="26dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="28dp"
            android:text="role"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_firstname" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hint_username"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/username"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="290dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:paddingTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="288dp"
            android:layout_height="44dp"
            android:layout_below="@+id/username"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_password"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


        <EditText
            android:id="@+id/lastname"
            android:layout_width="289dp"
            android:layout_height="46dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_lastname"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:layout_below="@+id/lastname"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_firstname"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="287dp"
            android:layout_height="41dp"
            android:layout_below="@+id/role"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role" />

        <EditText
            android:id="@+id/email"
            android:layout_width="292dp"
            android:layout_height="43dp"
            android:layout_below="@+id/phone"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:editable="true"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/street_no"
            android:layout_width="289dp"
            android:layout_height="43dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_street"
            android:inputType="number"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/city"
            android:layout_width="288dp"
            android:layout_height="43dp"
            android:layout_below="@+id/street_no"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_city"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/street_no" />

        <EditText
            android:id="@+id/state"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_below="@+id/city"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_state"
            android:inputType="text"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="287dp"
            android:layout_height="41dp"
            android:layout_below="@+id/state"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:editable="true"
            android:hint="@string/hint_zipcode"
            android:inputType="number"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="150dp"
            android:layout_height="26dp"
            android:layout_below="@+id/zipcode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_dark"
            android:paddingTop="3dp"
            android:text="@string/button_submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zipcode" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="150dp"
            android:layout_height="26dp"
            android:layout_below="@+id/role"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_dark"
            android:paddingTop="3dp"
            android:text="@string/text_logout"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>